# topoprocessor

./: .gitignore  README.md
src/: CMakeLists.txt  cotree_multipatch_gmsh.m  dotcross.h  export_to_gmsh.m  gaussian.h  generic_two_manifold.cpp  generic_two_manifold.hpp  lean_cohomology.cpp  lean_cohomology.hpp  mapped_file.h  sgnint32_t.cpp  sgnint32_t.hpp  strtot.hpp  timecounter.cpp  timecounter.h
src/main/: main.cpp
test/: cantilever.geo  cantilever.msh  cube.geo  cube.mesh  cube.msh  reference.mesh  reference.msh  test.brep  thick_L.msh
test/meshes/: furch.mesh  torus.mesh
